--- a/navbar.html
+++ b/navbar.html
@@ -29,15 +29,17 @@
             </div>
           </div>
         </div>
-        <ul class="outer-nav">
-          <li class="is-active">Home</li>
-          <li>Pronite</li>
-          <li>Sponsors</li>
-          <li>About Us</li>
-          <li>Gallery</li>
-          <li>Meet The Team</li>
-          <li>Schedule</li>
-          <li>Events</li>
+        <ul class="outer-nav" >
+          <a href="../index.html"><li>Register</li></a>
+          <a href="index1.html"><li>Home</li></a>
+          <a href="../index.html"><li>About Us</li></a>
+          <a href="../index.html"><li>Events</li></a>
+          <a href="../index.html"><li>Schedule</li></a>
+          <a href="../index.html"><li>Gallery</li></a>
+          <a href="../index.html"><li>Pronite</li></a>
+          <a href="../index.html"><li>Sponsors</li></a>
+          <a href="../index.html"><li>Meet The Team</li></a>
+      
         </ul>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
